# Unify

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  Messages.sh  README.md  install-widevine.sh  io.github.denysmb.unify.desktop  io.github.denysmb.unify.json  io.github.denysmb.unify.metainfo.xml  unify.notifyrc
.cache/clangd/index/: configmanager.cpp.F51A9BE497A89734.idx  configmanager.h.EDF1041DFD38040F.idx  main.cpp.80FC7B60E97694A3.idx  oauthmanager.cpp.044C19C981ABBEDA.idx  oauthmanager.h.E1F8842051D59B55.idx
.github/workflows/: update-flathub.yml
po/: Unify.pot  es.po  nl.po
src/: .qmlls.ini  CMakeLists.txt  configmanager.cpp  configmanager.h  faviconcache.cpp  faviconcache.h  keyeventfilter.cpp  main.cpp  oauthmanager.cpp  oauthmanager.h  resources.qrc  trayiconmanager.cpp  trayiconmanager.h
src/core/: applicationshortcutmanager.cpp  applicationshortcutmanager.h  configmanager.cpp  configmanager.h  notificationpresenter.cpp  notificationpresenter.h
src/qml/: Main.qml
src/qml/components/: DetachedServiceWindow.qml  EmptyState.qml  InternalLinkOverlay.qml  NowPlayingIndicator.qml  PopupWindow.qml  ServiceIconButton.qml  ServiceTabBar.qml  ServiceWebView.qml  ServicesSidebar.qml  ShortcutIconButton.qml  TabWebView.qml  WebViewStack.qml  WorkspacesBar.qml
src/qml/dialogs/: ApplicationShortcutDialog.qml  DesktopMediaDialog.qml  OAuth2Dialog.qml  PermissionDialog.qml  ServiceDialog.qml  WorkspaceDialog.qml
src/qml/drawers/: WorkspaceDrawer.qml
src/qml/utils/: AntiDetection.js  Services.js
src/ui/: trayiconmanager.h
src/utils/: faviconcache.cpp  fileutils.cpp  fileutils.h  keyeventfilter.h  printhandler.cpp  printhandler.h  widevinemanager.cpp  widevinemanager.h
